# Function to configure binaries (file.in -> file) and install into bin directory
# Called from the subdirectories added below
FUNCTION(SCR_INSTALL_BIN file)
	CONFIGURE_FILE(${file}.in ${file} @ONLY)
	SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/${file} PROPERTIES GENERATED TRUE)

	INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${file} DESTINATION ${CMAKE_INSTALL_BINDIR})
ENDFUNCTION(SCR_INSTALL_BIN file)

FUNCTION(SCR_INSTALL_LIBEXEC file)
	CONFIGURE_FILE(${file}.in ${file} @ONLY)
	SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/${file} PROPERTIES GENERATED TRUE)

	INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${file} DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
ENDFUNCTION(SCR_INSTALL_LIBEXEC file)

ADD_SUBDIRECTORY(jobscripts)
ADD_SUBDIRECTORY(python)
