SET(PYFE_TOP
  README.rst
  LICENSE
  MANIFEST.in
  setup.py
)
INSTALL(FILES ${PYFE_TOP} DESTINATION ${CMAKE_INSTALL_BINDIR}/pyfe)
INSTALL(FILES test.sh
PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
        DESTINATION ${CMAKE_INSTALL_BINDIR}/pyfe)
ADD_SUBDIRECTORY(pyfe)
