SET(SCRJOB_BIN
  scr_halt
  scr_list_down_nodes
  scr_prerun
  scr_postrun
  scr_should_exit

  scr_run
  scr_srun
  scr_jsrun
  scr_lrun
  scr_fluxrun
  scr_mpirun
)

FOREACH(pyscript IN ITEMS ${SCRJOB_BIN})
	CONFIGURE_FILE(${pyscript}.py ${pyscript} @ONLY)
        SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/${pyscript} PROPERTIES GENERATED TRUE)
        INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${pyscript}
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
                DESTINATION ${CMAKE_INSTALL_BINDIR})
ENDFOREACH(pyscript IN ITEMS ${SCRJOB_BIN})

SET(SCRRUN_SH
  scr_srun_once.sh
  scr_srun_loop.sh
)

FOREACH(script IN ITEMS ${SCRRUN_SH})
	CONFIGURE_FILE(${script} ${script} @ONLY)
        SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/${script} PROPERTIES GENERATED TRUE)
        INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${script}
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
                DESTINATION ${CMAKE_INSTALL_BINDIR})
ENDFOREACH(script IN ITEMS ${SCRRUN_SH})
